src/app/components/organisms/panel4/panel4.component.scss
.collide {
    &__panel4 {
        display: flex;
        flex-wrap: wrap;
        width: 90%;
        padding-bottom: 4.5rem;
        align-items: center;
        justify-content: center;

        &__section {
            width: 50%;
            max-width: 44rem;
            box-sizing: border-box;
            padding: 0.5rem;
            transform: scale(0);
            opacity: 0;
        }

        &__text {
            display: flex;
            align-items: center;
        }

        &__badge {
            .bold {
                font-family: var(--mont-bold);
                text-transform: uppercase;
            }
        }
    }
}

:host {
    .animate {
        .collide {
            &__panel4 {
                &__section {
                    transform: scale(1);
                    opacity: 1;
                    animation: fadeIn 0.5s linear;
                }
            }
        }
    }
}

@keyframes fadeIn {
    0% {
        transform: scale(0);
        opacity: 0;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

@media screen and (max-width: 960px) {
    .collide {
        &__panel4 {
            margin-top: 5rem;
            &__section {
                width: 100%;
            }
        }
    }
}

